Added an Image to the Website
Added an Image of one of my separate projects.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <h1>Hey, I'm Julian.</h1>
     <p>This is my website. Not much to see here yet, the site is under development.</p>
     <p>Test line
-    <a href="https://julianley.com/myWebsite/">Another example Website</a>
+    <a href="https://julianley.com/myWebsite/">Another example Website</a> 
+    <p>Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
+    <img src="Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
 </body>
 </html>
