--- a/index.html
+++ b/index.html
@@ -21,12 +21,32 @@
         }
     </style>
 </head>
+<!--This is a very cumbersome way of writing comments.-->
 <body>
     <h1>Hey, I'm Julian.</h1>
     <p>This is my website. Not much to see here yet, the site is under development.</p>
     <p>Test line
-    <a href="https://julianley.com/myWebsite/">Another example Website</a> 
-    <p>Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
+    <a href="https://julianley.com/myWebsite/" target="_blank">Another example Website</a> 
+    <br><br><hr><br>
+    <h2>3D Modeling</h2>
+    <p style="color:rgb(255, 0, 0)">Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
     <img src="Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
+    <br>
+    <a href="Images/donutImage.jpg" target="_blank">Open Donut Image</a> 
+    <br><br>
+    <hr>
+    <br>
+    <b>Hey! This text is bold.<br></b>
+    <strong>Hey! This text is strong.<br></strong>
+    <i>Hey! This text is italic.<br></i>
+    <em>Hey! This text is emphasized.<br></em>
+    <mark>Hey! This text is marked.<br></mark>
+    <small>Hey! This text is small.<br></small>
+    <del>Hey! This text is deleted.<br></del>
+    <ins>Hey! This text is inserted.<br></ins>
+    <p>Normal text<sub>Hey! This text is subscript.</sub><br></p>
+    <p>Normal text<sup>Hey! This text is superscript.</sup><br></p>
+    <p></p>
+    <a href="newPage.html">Open another site</a>
 </body>
 </html>
