--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <p>Normal text<sub>Hey! This text is subscript.</sub><br></p>
     <p>Normal text<sup>Hey! This text is superscript.</sup><br></p>
     <p></p>
-    <a href="newPage.html">Open another site</a>
+    <a href="/newPage/">Open another site</a>
 </body>
 </html>
