--- a/newPage/index.html
+++ b/newPage/index.html
@@ -24,7 +24,7 @@
 <!--This is a very cumbersome way of writing comments.-->
 <body>
     <h1>Hey, I'm Julian.</h1>
-    <a href="index.html">Go back to main site</a>
+    <a href="https://julianley.com/">Go back to main site</a>
 
 </body>
 </html>
