--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <p>Normal text<sub>Hey! This text is subscript.</sub><br></p>
     <p>Normal text<sup>Hey! This text is superscript.</sup><br></p>
     <p></p>
-    <a href="/newPage/">Open another site</a>
+    <a href="https://julianley.com/newPage/">Open another site</a>
+    <a href="newPage/">Experimental relative link</a>
+
 </body>
 </html>
