--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--This is a very cumbersome way of writing comments.-->
 <body>
     <h1>Hey, I'm Julian.</h1>
-    <p>This is my website. Not much to see here yet, the site is under development.</p>
+    <p>This is my website. Not much to see here yet, the site is under development.</p
     <p>Test line
     <a href="https://julianley.com/myWebsite/" target="_blank">Another example Website</a> 
     <br><br><hr><br>
@@ -49,6 +49,9 @@
     <p></p>
     <br>
     <a href="newPage/">Open another site using relative link</a>
+    <br><br><br><br>
+    <p>You can contact me here: </p>
+    <a href="mailto:contact@julianley.com">contact@julianley.com</a>
 
 </body>
 </html>
