--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Julian, Ley">
+    <meta name="author" content="Julian Ley">
+    <meta http-equiv="refresh" content="30">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julian's Website</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
