Changed the embedded website
Changed the embedded website to the same website currently viewed.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Julian, Ley">
     <meta name="author" content="Julian Ley">
-    <meta http-equiv="refresh" content="30">
+    <meta http-equiv="refresh" content="30"> <!--Needs to be removed in the future unless the page displays real-time data-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julian's Website</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
@@ -41,7 +41,7 @@
     <br>
     <a href="newPage/">Open another site using relative link</a>
     <br><br>
-    <iframe src="https://julianley.com/myWebsite/" title="Here you can see the website that the first link opens up to" height="300" width="800" style="border:none;"></iframe>
+    <iframe src="https://julianley.com/" title="Here you can see the website that the first link opens up to" height="300" width="900" style="border:none;"></iframe>
     <br><br><br><br>
     <p>You can contact me here: </p>
     <a href="mailto:contact@julianley.com">contact@julianley.com</a>
