New Page - Research Assistant
Added a page where I can show my work as a research assistant at KTH

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <!--This is a very cumbersome way of writing comments.-->
 <body>
     <h1>Hey, I'm Julian.</h1>
-    <p>This is my website. Not much to see here yet, the site is under development.</p
-    <p>Test line
+    <p>This is my website. Not much to see here yet, the site is under development.</p>
     <a href="https://julianley.com/myWebsite/" target="_blank">Another example Website</a> 
     <br><br><hr><br>
     <h2>3D Modeling</h2>
@@ -39,7 +38,8 @@
     <span>Normal Text</span><sup>Hey! This text is superscript.</sup><br>
     </div>
     <br>
-    <a href="newPage/">Open another site using relative link</a>
+    <a href="Blender/">Open another site using relative link</a><br><br>
+    <a href="ResearchAssistant/">Work as research assistant</a>
     <br><br>
     <iframe src="https://julianley.com/" title="Here you can see the website that the first link opens up to" height="300" width="900" style="border:none;"></iframe>
     <br><br><br><br>
