--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -18,7 +18,11 @@
             After the course ended, I was hired to continue developing and refining this model further, allowing me to expand and enhance the original project.
         </p><br><br>
 
-        <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" width="75%" height="75%">
+        <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
+        <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
+        <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
+        <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
+
     </body>
     
 </html>
