--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Julian, Ley">
     <meta name="author" content="Julian Ley">
-    <meta http-equiv="refresh" content="30"> <!--Needs to be removed in the future unless the page displays real-time data-->
+    <!--<meta http-equiv="refresh" content="30"> Needs to be removed in the future unless the page displays real-time data-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julian's Website</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
