New image Research Assistant
Added an image that shows how the different preset scenarios are rated.

--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -19,9 +19,13 @@
         </p><br><br>
 
         <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
-        <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
-        <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
-        <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
+        <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Rating Menu" width="75%" height="75%"><br>
+        <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Free Menu" width="75%" height="75%"><br>
+        <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Platform" width="75%" height="75%"><br>
+        <p>
+            The ratings of the different simulations are saved in a json file:
+        </p><br>
+        <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" width="20%" height="20%"><br>
 
     </body>
     
