Image for Blender
Added image of some of my work to Blender site

--- a/Blender/index.html
+++ b/Blender/index.html
@@ -25,6 +25,11 @@
 <body>
     <h1>Hey, I'm Julian.</h1>
     <a href="../">Go back to main site</a>
-
+    <h2>3D Modeling</h2>
+    <h3 id="blenderHeader">Blender</h3> <!--You can make a link to this bookmark by doing <a href="blenderHeader">Link Text</a>-->
+    <p style="color:rgb(255, 0, 0)">Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
+    <img src="../Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
+    <br>
+ 
 </body>
 </html>
