--- a/index.html
+++ b/index.html
@@ -25,23 +25,10 @@
     <br><br>
     <hr>
     <br>
-    <div class="experiments">
-    <b>Hey! This text is bold.<br></b>
-    <strong>Hey! This text is strong.<br></strong>
-    <i>Hey! This text is italic.<br></i>
-    <em>Hey! This text is emphasized.<br></em>
-    <mark>Hey! This text is marked.<br></mark>
-    <small>Hey! This text is small.<br></small>
-    <del>Hey! This text is deleted.<br></del>
-    <ins>Hey! This text is inserted.<br></ins>
-    <span>Normal Text</span><sub>Hey! This text is subscript.</sub><br>
-    <span>Normal Text</span><sup>Hey! This text is superscript.</sup><br>
-    </div>
-    <br>
     <a href="Blender/">Open another site using relative link</a><br><br>
     <a href="ResearchAssistant/">Work as research assistant</a>
     <br><br>
-    <iframe src="https://julianley.com/" title="Here you can see the website that the first link opens up to" height="300" width="900" style="border:none;"></iframe>
+    <iframe src="https://julianley.com/ResearchAssistant/" title="Here you can see the website that the first link opens up to" height="300" width="900" style="border:none;"></iframe>
     <br><br><br><br>
     <p>You can contact me here: </p>
     <a href="mailto:contact@julianley.com">contact@julianley.com</a>
