--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="keywords" content="Julian, Ley">
-        <meta name="author" content="Julian Ley">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Work as Research Assistant</title>
-        <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
-        <link rel="stylesheet" href="../styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="Julian, Ley">
+    <meta name="author" content="Julian Ley">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Work as Research Assistant</title>
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
+    <link rel="stylesheet" href="../styles.css">
+</head>
 
-    <body>
-        <h1>Remodeling and simulation of Stockholm subway station</h1>
-        <p>
-            Since June 15, 2024, I have been employed by KTH as a research assistant. 
-            Initially, I worked on a group project during a software development course at KTH to create a model of a Stockholm subway station. 
-            After the course ended, I was hired to continue developing and refining this model further, allowing me to expand and enhance the original project.
-        </p><br><br>
+<body>
+    <h1>Remodeling and simulation of Stockholm subway station</h1>
+    <p>
+        Since June 15, 2024, I have been employed by KTH as a research assistant. 
+        Initially, I worked on a group project during a software development course at KTH to create a model of a Stockholm subway station. 
+        After the course ended, I was hired to continue developing and refining this model further, allowing me to expand and enhance the original project.
+    </p><br><br>
 
-        <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" width="75%" height="75%"><br>
-        <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Rating Menu" width="75%" height="75%"><br>
-        <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Free Menu" width="75%" height="75%"><br>
-        <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Platform" width="75%" height="75%"><br>
-        <p>
-            The ratings of the different simulations are saved in a json file:
-        </p><br>
-        <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" width="20%" height="20%"><br>
+    <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" class="imgage"><br>
+    <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Rating Menu" class="imgage"><br>
+    <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Free Menu" class="imgage"><br>
+    <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Platform" class="imgage"><br>
+    <p>
+        The ratings of the different simulations are saved in a json file:
+    </p><br>
+    <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" class="imgage"><br>
 
-    </body>
-    
+</body>
 </html>
