Added link back to the main page

--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>Remodeling and simulation of Stockholm subway station</h1>
+    <a href="../">Go back to main site</a>
     <p>
         Since June 15, 2024, I have been employed by KTH as a research assistant. 
         Initially, I worked on a group project during a software development course at KTH to create a model of a Stockholm subway station. 
