Removed unnecessary elements

--- a/index.html
+++ b/index.html
@@ -14,18 +14,8 @@
 <body>
     <h1>Hey, I'm Julian.</h1>
     <p>This is my website. Not much to see here yet, the site is under development.</p>
-    <a href="https://julianley.com/myWebsite/" target="_blank">Another example Website</a> 
-    <br><br><hr><br>
-    <h2>3D Modeling</h2>
-    <h3 id="blenderHeader">Blender</h3> <!--You can make a link to this bookmark by doing <a href="blenderHeader">Link Text</a>-->
-    <p style="color:rgb(255, 0, 0)">Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
-    <img src="Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
     <br>
-    <a href="Images/donutImage.jpg" target="_blank">Open Donut Image</a> 
-    <br><br>
-    <hr>
-    <br>
-    <a href="Blender/">Open another site using relative link</a><br><br>
+    <a href="Blender/">Blender</a><br><br>
     <a href="ResearchAssistant/">Work as research assistant</a>
     <br><br>
     <iframe src="https://julianley.com/ResearchAssistant/" title="Here you can see the website that the first link opens up to" height="300" width="900" style="border:none;"></iframe>
