Added a border to the iframe to make a distinction to the main page.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="Blender/">Blender</a><br><br>
     <a href="ResearchAssistant/">Work as research assistant</a>
     <br><br>
-    <iframe src="https://julianley.com/ResearchAssistant/" title="Here you can see the website that the first link opens up to" height="300" width="900" style="border:none;"></iframe>
+    <iframe src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant" height="300" width="900" style="border:2px solid rgb(203, 203, 203);"></iframe>
     <br><br><br><br>
     <p>You can contact me here: </p>
     <a href="mailto:contact@julianley.com">contact@julianley.com</a>
