Added a navigation bar to the main site.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Julian, Ley">
     <meta name="author" content="Julian Ley">
-    <!--<meta http-equiv="refresh" content="30"> Needs to be removed in the future unless the page displays real-time data-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Julian's Website</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <!--This is a very cumbersome way of writing comments.-->
+
+<div class="navbar">
+    <a href="#" class="active">Home</a>
+    <a href="Blender/">Blender</a>
+    <a href="ResearchAssistant/">Work as research assistant</a>
+    <a href="#/" class="right">Contact</a>
+</div>
 <body>
     <h1>Hey, I'm Julian.</h1>
     <p>This is my website. Not much to see here yet, the site is under development.</p>
