--- a/Blender/index.html
+++ b/Blender/index.html
@@ -21,6 +21,13 @@
         }
     </style>
 </head>
+<div class="navbar">
+    <a href="#">Home</a>
+    <a href="Blender/" class="active">Blender</a>
+    <a href="ResearchAssistant/">Work as research assistant</a>
+    <a href="#/" class="right">Contact</a>
+</div>
+
 <!--This is a very cumbersome way of writing comments.-->
 <body>
     <h1>Hey, I'm Julian.</h1>
