--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 
+<div class="navbar">
+    <a href="#">Home</a>
+    <a href="Blender/">Blender</a>
+    <a href="ResearchAssistant/" class="active">Work as research assistant</a>
+    <a href="#/" class="right">Contact</a>
+</div>
+
 <body>
     <h1>Remodeling and simulation of Stockholm subway station</h1>
     <a href="../">Go back to main site</a>
