--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <a href="#" class="active">Home</a>
     <a href="Blender/">Blender</a>
     <a href="ResearchAssistant/">Work as research assistant</a>
-    <a href="#/" class="right">Contact</a>
+    <a href="#" class="right">Contact</a>
 </div>
 <body>
     <h1>Hey, I'm Julian.</h1>
     <p>This is my website. Not much to see here yet, the site is under development.</p>
     <br>
-    <a href="Blender/">Blender</a><br><br>
-    <a href="ResearchAssistant/">Work as research assistant</a>
     <br><br>
-    <iframe src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant" height="300" width="900" style="border:2px solid rgb(203, 203, 203);"></iframe>
+    <iframe src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant" height="400" width="900" style="border:2px solid rgb(203, 203, 203);"></iframe>
     <br><br><br><br>
     <p>You can contact me here: </p>
     <a href="mailto:contact@julianley.com">contact@julianley.com</a>
