The Blender page now uses the same stylesheet as the other pages

--- a/Blender/index.html
+++ b/Blender/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Julian's Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 50px;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        p {
-            font-size: 1.2em;
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="Julian, Ley">
+        <meta name="author" content="Julian Ley">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blender</title>
+        <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
+        <link rel="stylesheet" href="../styles.css">
+    </head>
 
 
 <!--This is a very cumbersome way of writing comments.-->
 <body>
     <div class="navbar">
-        <a href="#">Home</a>
-        <a href="Blender/" class="active">Blender</a>
-        <a href="ResearchAssistant/">Work as research assistant</a>
+        <a href="../">Home</a>
+        <a href="#" class="active">Blender</a>
+        <a href="../ResearchAssistant/">Work as research assistant</a>
         <a href="#/" class="right">Contact</a>
     </div>
     <h1>Hey, I'm Julian.</h1>
