--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <p>This is my website. Not much to see here yet, the site is under development.</p>
     <br>
     <br><br>
-    <iframe src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant" height="400" width="900" style="border:2px solid rgb(203, 203, 203);"></iframe>
+    <!-- height="400" width="900" style="border:2px solid rgb(203, 203, 203);"-->
+    <iframe class="responsive-iframe" src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant"></iframe>
     <br><br><br><br>
     <p>You can contact me here: </p>
     <a href="mailto:contact@julianley.com">contact@julianley.com</a>
