Navigation bar disappears when scrolling down on the main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <body>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <a href="#" class="active">Home</a>
         <a href="Blender/">Blender</a>
         <a href="ResearchAssistant/">Work as research assistant</a>
@@ -29,5 +29,6 @@
     <p>You can contact me here: </p>
     <a href="mailto:contact@julianley.com">contact@julianley.com</a>
 
+    <script src="scripts.js"></script>
 </body>
 </html>
