Navbar disappears on scroll for all pages

--- a/Blender/index.html
+++ b/Blender/index.html
@@ -13,7 +13,7 @@
 
 <!--This is a very cumbersome way of writing comments.-->
 <body>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <a href="../">Home</a>
         <a href="#" class="active">Blender</a>
         <a href="../ResearchAssistant/">Work as research assistant</a>
@@ -27,5 +27,7 @@
     <img src="../Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
     <br>
  
+    <script src="../scripts.js"></script>
+
 </body>
 </html>
