--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -13,7 +13,7 @@
 
 
 <body>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <a href="../">Home</a>
         <a href="../Blender/">Blender</a>
         <a href="#" class="active">Work as research assistant</a>
@@ -35,6 +35,8 @@
         The ratings of the different simulations are saved in a json file:
     </p><br>
     <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" class="imgage"><br>
+
+    <script src="../scripts.js"></script>
 
 </body>
 </html>
