--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <!-- height="400" width="900" style="border:2px solid rgb(203, 203, 203);"-->
     <iframe class="responsive-iframe" src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant"></iframe>
     <br><br><br><br>
-    <p>You can contact me here: </p>
-    <a href="mailto:contact@julianley.com">contact@julianley.com</a>
+
+    <footer>
+        <p>&copy; 2024 Julian Ley. All rights reserved.</p>
+        <p>Contact: <a href="mailto:contact@julianley.com">contact@julianley.com</a></p>
+    </footer>
+
 
     <script src="scripts.js"></script>
 </body>
