All pages have a footer.

--- a/Blender/index.html
+++ b/Blender/index.html
@@ -27,6 +27,11 @@
     <img src="../Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
     <br>
  
+    <footer>
+        <p>&copy; 2024 Julian Ley. All rights reserved.</p>
+        <p>Contact: <a href="mailto:contact@julianley.com">contact@julianley.com</a></p>
+    </footer>
+
     <script src="../scripts.js"></script>
 
 </body>
