--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -36,6 +36,11 @@
     </p><br>
     <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" class="imgage"><br>
 
+    <footer>
+        <p>&copy; 2024 Julian Ley. All rights reserved.</p>
+        <p>Contact: <a href="mailto:contact@julianley.com">contact@julianley.com</a></p>
+    </footer>
+
     <script src="../scripts.js"></script>
 
 </body>
