Footer now appears at the bottom of the page

--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="Julian, Ley">
@@ -9,9 +9,6 @@
     <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
-
-
-
 <body>
     <div class="navbar" id="navbar">
         <a href="../">Home</a>
@@ -19,29 +16,28 @@
         <a href="#" class="active">Work as research assistant</a>
         <a href="#" class="right">Contact</a>
     </div>
-    <h1>Remodeling and simulation of Stockholm subway station</h1>
-    <a href="../">Go back to main site</a>
-    <p>
-        Since June 15, 2024, I have been employed by KTH as a research assistant. 
-        Initially, I worked on a group project during a software development course at KTH to create a model of a Stockholm subway station. 
-        After the course ended, I was hired to continue developing and refining this model further, allowing me to expand and enhance the original project.
-    </p><br><br>
+    <div class="content">
+        <h1>Remodeling and simulation of Stockholm subway station</h1>
+        <a href="../">Go back to main site</a>
+        <p>
+            Since June 15, 2024, I have been employed by KTH as a research assistant. 
+            Initially, I worked on a group project during a software development course at KTH to create a model of a Stockholm subway station. 
+            After the course ended, I was hired to continue developing and refining this model further, allowing me to expand and enhance the original project.
+        </p><br><br>
 
-    <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" class="imgage"><br>
-    <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Rating Menu" class="imgage"><br>
-    <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Free Menu" class="imgage"><br>
-    <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Platform" class="imgage"><br>
-    <p>
-        The ratings of the different simulations are saved in a json file:
-    </p><br>
-    <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" class="imgage"><br>
-
+        <img src="../Images/ResearchAssistant/StartMenu.jpg" alt="Image of Start Menu" class="imgage"><br>
+        <img src="../Images/ResearchAssistant/RatingMenu.jpg" alt="Image of Rating Menu" class="imgage"><br>
+        <img src="../Images/ResearchAssistant/FreeMenu.jpg" alt="Image of Free Menu" class="imgage"><br>
+        <img src="../Images/ResearchAssistant/IngameImage1.jpg" alt="Image of Platform" class="imgage"><br>
+        <p>
+            The ratings of the different simulations are saved in a json file:
+        </p><br>
+        <img src="../Images/ResearchAssistant/SaveFileImage.jpg" alt="Image of Savefile" class="imgage"><br>
+    </div>
     <footer>
         <p>&copy; 2024 Julian Ley. All rights reserved.</p>
         <p>Contact: <a href="mailto:contact@julianley.com">contact@julianley.com</a></p>
     </footer>
-
     <script src="../scripts.js"></script>
-
 </body>
 </html>
