--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
-<!--This is a very cumbersome way of writing comments.-->
-
-
 <body>
     <div class="navbar" id="navbar">
         <a href="#" class="active">Home</a>
@@ -19,20 +16,18 @@
         <a href="ResearchAssistant/">Work as research assistant</a>
         <a href="#" class="right">Contact</a>
     </div>
-    <h1>Hey, I'm Julian.</h1>
-    <p>This is my website. Not much to see here yet, the site is under development.</p>
-    <br>
-    <br><br>
-    <!-- height="400" width="900" style="border:2px solid rgb(203, 203, 203);"-->
-    <iframe class="responsive-iframe" src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant"></iframe>
-    <br><br><br><br>
-
+    <div class="content">
+        <h1>Hey, I'm Julian.</h1>
+        <p>This is my website. Not much to see here yet, the site is under development.</p>
+        <br>
+        <br><br>
+        <iframe class="responsive-iframe" src="https://julianley.com/ResearchAssistant/" title="Iframe with information about my work as a research assistant"></iframe>
+        <br><br><br><br>
+    </div>
     <footer>
         <p>&copy; 2024 Julian Ley. All rights reserved.</p>
         <p>Contact: <a href="mailto:contact@julianley.com">contact@julianley.com</a></p>
     </footer>
-
-
     <script src="scripts.js"></script>
 </body>
 </html>
