--- a/Blender/index.html
+++ b/Blender/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="keywords" content="Julian, Ley">
-        <meta name="author" content="Julian Ley">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blender</title>
-        <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
-        <link rel="stylesheet" href="../styles.css">
-    </head>
-
-
-<!--This is a very cumbersome way of writing comments.-->
+<head>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="Julian, Ley">
+    <meta name="author" content="Julian Ley">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blender</title>
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
+    <link rel="stylesheet" href="../styles.css">
+</head>
 <body>
     <div class="navbar" id="navbar">
         <a href="../">Home</a>
@@ -19,20 +16,19 @@
         <a href="../ResearchAssistant/">Work as research assistant</a>
         <a href="#/" class="right">Contact</a>
     </div>
-    <h1>Hey, I'm Julian.</h1>
-    <a href="../">Go back to main site</a>
-    <h2>3D Modeling</h2>
-    <h3 id="blenderHeader">Blender</h3> <!--You can make a link to this bookmark by doing <a href="blenderHeader">Link Text</a>-->
-    <p style="color:rgb(255, 0, 0)">Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
-    <img src="../Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
-    <br>
- 
+    <div class="content">
+        <h1>Hey, I'm Julian.</h1>
+        <a href="../">Go back to main site</a>
+        <h2>3D Modeling</h2>
+        <h3 id="blenderHeader">Blender</h3> <!--You can make a link to this bookmark by doing <a href="blenderHeader">Link Text</a>-->
+        <p style="color:rgb(255, 0, 0)">Here is an image of a donut I made following Blender Guru's tutorial on Youtube:</p>
+        <img src="../Images/donutImage.jpg" alt="Donut!" width="28%" height="28%">
+        <br>
+    </div>
     <footer>
         <p>&copy; 2024 Julian Ley. All rights reserved.</p>
         <p>Contact: <a href="mailto:contact@julianley.com">contact@julianley.com</a></p>
     </footer>
-
     <script src="../scripts.js"></script>
-
 </body>
 </html>
