Added a contact page

--- a/ResearchAssistant/index.html
+++ b/ResearchAssistant/index.html
@@ -14,7 +14,7 @@
         <a href="../">Home</a>
         <a href="../Blender/">Blender</a>
         <a href="#" class="active">Work as research assistant</a>
-        <a href="#" class="right">Contact</a>
+        <a href="../Contact/" class="right">Contact</a>
     </div>
     <div class="content">
         <h1>Remodeling and simulation of Stockholm subway station</h1>
