--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="active">Home</a>
         <a href="Blender/">Blender</a>
         <a href="ResearchAssistant/">Work as research assistant</a>
-        <a href="#" class="right">Contact</a>
+        <a href="Contact/" class="right">Contact</a>
     </div>
     <div class="content">
         <h1>Hey, I'm Julian.</h1>
